/* 
  Localizable.strings
  Puzzle

  Created by Clément DEUST on 23/01/2017.
  Copyright © 2017 cdeust. All rights reserved.
*/

//Error
"invalid_values" = "Invalid values sent";
"fill_form_correctly" = "Please make sure you have filled the present form correctly.";
"fill_credentials_correctly" = "Please make sure your email and password are filled correctly.";
"ok" = "OK";

//Login
"logged_in" = "You're connected !";
"failed_to_login" = "Email or password mismatched.";

//Account creation
"created_account" = "Your account was successfully created !";
"creation_failed" = "Your account failed to create !";

//Child creation
"children_added" = "Your child was successfully added to your account !";
"children_failed_adding" = "Your child was not added due to an error.";

//Child selection
"add_children" = "Add children";
"log_out" = "Log out";

//Passcode
"touch_id_required_end_session" = "Authentication is needed to prevent your child from ending his game session";
