...
        <scene sceneID="5zo-Jg-lwf">
            <objects>
                <viewController automaticallyAdjustsScrollViewInsets="NO" id="E8A-ny-u7R" customClass="LoginVC" customModule="Puzzle" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="GCf-Ai-H6F"/>
...
                                                    <constraint firstAttribute="height" constant="35" id="gZx-rd-CEw"/>
                                                </constraints>
                                                <state key="normal" title="Create"/>
                                                <connections>
                                                    <segue destination="pnE-nP-NfB" kind="show" identifier="loadAccountCreation" id="w6J-nN-Cy7"/>
...
                                                    <constraint firstAttribute="height" constant="35" id="l8X-nm-ii1"/>
                                                </constraints>
                                                <state key="normal" title="Login"/>
                                                <connections>
                                                    <action selector="tryToLoginWithSender:" destination="E8A-ny-u7R" eventType="touchUpInside" id="Bad-jq-J0z"/>
...
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="enter your email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fzz-fZ-9v1">
                                                        <rect key="frame" x="20" y="34.5" width="295" height="50"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="password" label="password"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="50" id="iem-AW-viI"/>
...
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="enter your password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ta6-xb-HYf">
                                                        <rect key="frame" x="20" y="114.5" width="295" height="50"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="email" label="email"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="50" id="04w-47-lnt"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Memory" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tg3-Lv-sSP">
                                                <rect key="frame" x="20" y="163.5" width="335" height="21"/>
                                                <constraints>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Abc" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Pi-W5-gqN">
                                                <rect key="frame" x="20" y="288.5" width="335" height="21"/>
                                                <constraints>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZcL-cP-SsM">
                                                <rect key="frame" x="20" y="413.5" width="335" height="21"/>
                                                <constraints>
...
                                                    <constraint firstAttribute="height" constant="30" id="afv-cR-Tfo"/>
                                                </constraints>
                                                <state key="normal" title="End"/>
                                                <connections>
                                                    <action selector="endCreationWithSender:" destination="hm1-Ps-aqY" eventType="touchUpInside" id="IKw-ET-IQE"/>
...
                                                    <constraint firstAttribute="height" constant="30" id="vUR-ju-hfW"/>
                                                </constraints>
                                                <state key="normal" title="Add"/>
                                                <connections>
                                                    <action selector="addChildWithSender:" destination="hm1-Ps-aqY" eventType="touchUpInside" id="Z2v-dO-CNF"/>
...
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="enter your child firstname" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vg4-eC-tPo">
                                                        <rect key="frame" x="20" y="35" width="295" height="50"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="firstname" label="firstname"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="50" id="wl6-TB-xS9"/>
...
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="enter your child lastname" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mG2-WX-Dx9">
                                                        <rect key="frame" x="20" y="95" width="295" height="50"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="lastname" label="lastname"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="50" id="dkc-Cy-1p7"/>
...
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="enter your child sex" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gVH-X5-agg">
                                                        <rect key="frame" x="20" y="215" width="295" height="50"/>
